--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mui/icons-material": "^5.16.7",
+    "@vercel/analytics": "^1.4.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
