--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mui/icons-material": "^5.16.7",
     "@vercel/analytics": "^1.4.1",
+    "mixpanel": "^0.18.0",
+    "mixpanel-browser": "^2.58.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/mixpanel-browser": "^2.51.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
